代码生成修改，文档改成torna,升级部分依赖